--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="/css/style.css">
   
     <style type="text/css">
-        body {
-            font-family: 'Varela Round', sans-serif;
-        }
+  
         .modal-login {
             color: #636363;
             width: 350px;
@@ -79,7 +77,94 @@
             display: inline-block;
             margin: 100px auto;
         }
+     
+
+	body{
+		color: #fff;
+		background: #3598dc;
+		font-family: 'Roboto', sans-serif ,'Varela Round';
+        width:100%;
+	         height:100vh;
+	         overflow:auto;
+	 
+    }
+    .form-control{
+		height: 41px;
+		background: #f2f2f2;
+		box-shadow: none !important;
+		border: none;
+	}
+	.form-control:focus{
+		background: #e2e2e2;
+	}
+    .form-control, .btn{        
+        border-radius: 3px;
+    }
+	.signup-form{
+        padding: 25% 0;
+		width: 390px;
+		margin: 30px auto;
+	}
+	.signup-form form{
+		color: #999;
+		border-radius: 3px;
+    	margin-bottom: 15px;
+        background: #fff;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+        padding: 30px;
+    }
+	.signup-form h2 {
+		color: #333;
+		font-weight: bold;
+        margin-top: 0;
+    }
+    .signup-form hr {
+        margin: 0 -30px 20px;
+    }    
+	.signup-form .form-group{
+		margin-bottom: 20px;
+	}
+	.signup-form input[type="checkbox"]{
+		margin-top: 3px;
+	}
+	.signup-form .row div:first-child{
+		padding-right: 10px;
+	}
+	.signup-form .row div:last-child{
+		padding-left: 10px;
+	}
+    .signup-form .btn{        
+        font-size: 16px;
+        font-weight: bold;
+		background: #3598dc;
+		border: none;
+		min-width: 140px;
+    }
+	.signup-form .btn:hover, .signup-form .btn:focus{
+		background: #2389cd !important;
+        outline: none;
+	}
+    .signup-form a{
+		color: #fff;
+		text-decoration: underline;
+	}
+	.signup-form a:hover{
+		text-decoration: none;
+	}
+	.signup-form form a{
+		color: #3598dc;
+		text-decoration: none;
+	}	
+	.signup-form form a:hover{
+		text-decoration: underline;
+	}
+    .signup-form .hint-text {
+		padding-bottom: 15px;
+		text-align: center;
+    }
+    
     </style>
+
   </head>
   <body>
   
@@ -92,9 +177,9 @@
         <div class="row">
 
           <div class="col-3 templateux-logo">
-            <a href="index.html" class="animsition-link">InstaDoc</a>
+            <a href="/" class="animsition-link">InstaDoc</a>
           </div>
-          <nav class="col-9 site-nav">
+          <nav class="col-9 site-nav ">
             <button class="d-block d-md-none hamburger hamburger--spin templateux-toggle templateux-toggle-light ml-auto templateux-toggle-menu" data-toggle="collapse" data-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
               <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
@@ -103,12 +188,21 @@
 
             <ul class="sf-menu templateux-menu d-none d-md-block text-white-50">
               <li class="active">
-                <a href="index.html" class="animsition-link">Home</a>
+                <a href="/" class="animsition-link">Home</a>
               </li>
               <li><a href="about.html" class="animsition-link">About</a></li>
               
-              <li><a href="doctors" class="animsition-link">Doctors</a></li>
               <li><a href="#contact" class="animsition-link">Contact</a></li>
+              <% if(!username && !doctorname) {%>
+                <li><a href="/doctors" class="animsition-link">Doctors</a></li>  
+
+            <%} else if(username && !doctorname){%>
+                <li><a href="/user" class="animsition-link">Welcome <%=username%></a></li>            
+                <li><a href="/" class="animsition-link">Log out</a></li>
+            <%}else if(!username && doctorname) {%>
+                <li><a href="/user" class="animsition-link">Welcome <%=doctorname%></a></li>            
+                <li><a href="/" class="animsition-link">Log out</a></li>
+            <%}%>
             </ul> <!-- .templateux-menu -->
 
           </nav> <!-- .site-nav -->
