--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="templateux-footer bg-light">
+<footer class="templateux-footer bg-dark">
     <div class="container">
 
       <div class="row mb-5">
