--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,9 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>InstaDoc &mdash; Powered by Truebeat</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
+
   
     <style type="text/css">
-  
+        .dashboard{
+            padding: 20% 10%;
+        }
         .modal-login {
             color: #636363;
             width: 350px;
@@ -80,8 +85,8 @@
      
 
 	body{
-		color: #fff;
-		background: #3598dc;
+		color: rgb(12, 11, 11);
+		background-color: #636363;
 		font-family: 'Roboto', sans-serif ,'Varela Round';
         width:100%;
 	         height:100vh;
@@ -193,15 +198,13 @@
               <li><a href="about.html" class="animsition-link">About</a></li>
               
               <li><a href="#contact" class="animsition-link">Contact</a></li>
-              <% if(!username && !doctorname) {%>
+              <% if(!username){%>
                 <li><a href="/doctors" class="animsition-link">Doctors</a></li>  
 
-            <%} else if(username && !doctorname){%>
+            <%} else{%>
                 <li><a href="/user" class="animsition-link">Welcome <%=username%></a></li>            
                 <li><a href="/" class="animsition-link">Log out</a></li>
-            <%}else if(!username && doctorname) {%>
-                <li><a href="/user" class="animsition-link">Welcome <%=doctorname%></a></li>            
-                <li><a href="/" class="animsition-link">Log out</a></li>
+     
             <%}%>
             </ul> <!-- .templateux-menu -->
 
