--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,4 +1,20 @@
 <% include partials/header %>
+<div class="dashboard"  >
+      
+    <div class="row text-center" style="display:flex; flex-wrap: wrap;">
+        <% doctor.forEach(function(docAvail){ %>
 
-
+            <div class="col-md-3 col-sm-6">
+                <div class="thumbnail">
+                <div class="caption">
+                    <h3><%= docAvail.name %></h3>
+                    <!-- <h4>ONLINE NOW</h4> -->
+                    
+                    <a class="btn btn-primary " href="#"><i class="fas fa-video"></i></a>
+                </div>
+                </div>
+            </div>
+        <% }); %>
+    </div>
+</div>
 <% include partials/footer %>
