Styling and colour changing , added restful routing

--- a/views/doctor-signup.ejs
+++ b/views/doctor-signup.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 
 <div class="signup-form">
-    <form action="/doctor-login" method="post">
+    <form action="/doctor-signup" method="post">
             <h2>Sign Up</h2>
             <p>Please fill in this form to create an account!</p>
             <hr>
