--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <form action="/login" method="post">
+                            <form action="/user" method="post">
                                 <div class="form-group">
                                     <i class="fa fa-user"></i>
                                     <input type="text" class="form-control" placeholder="Username" name="username" required="required">
