--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,10 @@
     <style type="text/css">
         .dashboard{
             padding: 20% 10%;
+            background: #74ebd5;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #ACB6E5, #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #ACB6E5, #74ebd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
         }
         .modal-login {
             color: #636363;
@@ -85,7 +89,9 @@
      
 
 	body{
-		color: rgb(12, 11, 11);
+        background: #ADA996;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 		background-color: #636363;
 		font-family: 'Roboto', sans-serif ,'Varela Round';
         width:100%;
@@ -199,11 +205,11 @@
               
               <li><a href="#contact" class="animsition-link">Contact</a></li>
               <% if(!username){%>
-                <li><a href="/doctors" class="animsition-link">Doctors</a></li>  
+                <li><a href="/doctor-login" class="animsition-link">Doctors</a></li>  
 
             <%} else{%>
                 <li><a href="/user" class="animsition-link">Welcome <%=username%></a></li>            
-                <li><a href="/" class="animsition-link">Log out</a></li>
+                <li><a href="/logout" class="animsition-link">Log out</a></li>
      
             <%}%>
             </ul> <!-- .templateux-menu -->
