--- a/views/doctor-login.ejs
+++ b/views/doctor-login.ejs
@@ -6,7 +6,7 @@
                     <h4 class="modal-title">User Login</h4>
                 </div>
                 <div class="modal-body">
-                    <form action="/doctor-dash" method="post">
+                    <form action="/doctor-login" method="post">
                         <div class="form-group">
                             <i class="fa fa-user"></i>
                             <input type="text" class="form-control" placeholder="Doctor Name" name="doctorname" required="required">
@@ -18,6 +18,8 @@
                         <div class="form-group">
                             <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
                         </div>
+                        <div class="hint-text">Don't have an account? <a href="doctor-signup">Sign Up Today</a></div>
+
                     </form>				
                     
                 </div>
