--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
         <div class="col-md-4 pr-md-5">
           <div class="block-footer-widget">
             <h3>About</h3>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+            <p>A young startup that plans to revolutionise the medical field.</p>
           </div>
         </div>
 
@@ -47,7 +47,7 @@
 
             <div class="col-md-3">
               <div class="block-footer-widget">
-                <a href="#" class="btn btn-primary mb-3">Download for free</a>
+                
                 <p>Connect With Us</p>
                 <ul class="list-unstyled block-social">
                   <li><a href="#" class="p-1"><span class="icon-facebook-square"></span></a></li>
