--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,20 +1,25 @@
 <% include partials/header %>
-<div class="dashboard"  >
-      
-    <div class="row text-center" style="display:flex; flex-wrap: wrap;">
+<div class="dashboard" >
+        <div class="card-deck">
         <% doctor.forEach(function(docAvail){ %>
-
-            <div class="col-md-3 col-sm-6">
-                <div class="thumbnail">
-                <div class="caption">
-                    <h3><%= docAvail.name %></h3>
-                    <!-- <h4>ONLINE NOW</h4> -->
-                    
-                    <a class="btn btn-primary " href="#"><i class="fas fa-video"></i></a>
-                </div>
-                </div>
+            <div class="conatiner">
+                    <div class="card  border-danger mb-3" data-aos="fade-up" style="width: 18rem; float:left; display:flex; flex-wrap: wrap;">
+                            <img class="card-img-top" src="images/Doc.jpg" alt="Card image cap">
+                            <div class="card-body">
+                            <h5 class="card-title"><%= docAvail.name %></h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
             </div>
         <% }); %>
-    </div>
+        </div>
 </div>
-<% include partials/footer %>
+</div> <!-- .js-animsition -->
+
+
+<script src="/js/scripts-all.js"></script>
+<script src="/js/main.js"></script>
+
+</body>
+</html>
