Added database , login and Sign up

--- a/views/doctor-dash.ejs
+++ b/views/doctor-dash.ejs
@@ -1,5 +1,11 @@
 <% include partials/header %>
 
-
-
+<div class = "jumbotron-fluid jum">
+    <div class="container-fluid cont">
+        <h2>Hi Doctor your patience are waiting   <a class="btn btn-primary" href="https://hubl.in/DocC101">Click here</a></h2>
+    </div>
+</div>>
+    
+    
+    
 <% include partials/footer %>
