--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <% include partials/header.ejs %>    
 
-    <div class="templateux-cover" style="background-image: url(images/slider-1.jpg);">
+    <div class="templateux-cover" style="background-image: url(images/slider-1.jpg);" alt="Main Health Image">
       <div class="container">
         <div class="row align-items-lg-center">
           <div class="col-lg-6 text-center order-lg-2">
@@ -107,13 +107,13 @@
       <div class="container-fluid"  data-aos="fade-up">
         <div class="owl-carousel wide-slider">
           <div class="item">
-            <img src="images/slider-2.jpg" alt="Powered by TrueBeat" class="img-fluid">
+            <img src="images/slider-2.jpg" alt="Health Ring" class="img-fluid">
           </div>
           <div class="item">
-            <img src="images/slider-3.jpg" alt="Powered by TrueBeat" class="img-fluid">
+            <img src="images/slider-3.jpg" alt="Health Watch" class="img-fluid">
           </div>
           <div class="item">
-            <img src="images/slider-4.jpg" alt="Powered by TrueBeat" class="img-fluid">
+            <img src="images/slider-4.jpg" alt="Tele-scope" class="img-fluid">
           </div>
         </div> <!-- .owl-carousel -->
       </div>
@@ -190,13 +190,13 @@
 
     <div class="">
       <div class="d-flex flex-column flex-sm-row">
-        <a href="#" class="block-thumbnail-1 one-third" style="background-image: url('images/slider-2.jpg'); " data-aos="fade">
+        <a href="#" class="block-thumbnail-1 one-third" style="background-image: url('images/slider-2.jpg'); " alt="Health Ring" data-aos="fade">
           <div class="block-thumbnail-content">
             <h2>Innovative Health Ring</h2>
             
           </div>
         </a>
-        <a href="#" class="block-thumbnail-1 two-third" style="background-image: url('images/slider-1.jpg'); " data-aos="fade" data-aos-delay="100">
+        <a href="#" class="block-thumbnail-1 two-third" style="background-image: url('images/slider-1.jpg'); " alt="Health Tech World" data-aos="fade" data-aos-delay="100">
           <div class="block-thumbnail-content">
             <h2>Be Part of a healthier world</h2>
             
@@ -204,13 +204,13 @@
         </a>
       </div>
       <div class="d-flex flex-column flex-sm-row">
-        <a href="#" class="block-thumbnail-1 two-third" style="background-image: url('images/slider-3.jpg'); " data-aos="fade" data-aos-delay="200">
+        <a href="#" class="block-thumbnail-1 two-third" style="background-image: url('images/slider-3.jpg'); " alt="Health Watch" data-aos="fade" data-aos-delay="200">
           <div class="block-thumbnail-content">
             <h2>Personalised Health Watch</h2>
             
           </div>
         </a>
-        <a href="#" class="block-thumbnail-1 one-third" style="background-image: url('images/slider-4.jpg'); " data-aos="fade" data-aos-delay="300">
+        <a href="#" class="block-thumbnail-1 one-third" style="background-image: url('images/slider-4.jpg'); " alt="stethoscope" data-aos="fade" data-aos-delay="300">
           <div class="block-thumbnail-content">
             <h2>Tele-scope</h2>
             
