--- a/views/doctor-login.ejs
+++ b/views/doctor-login.ejs
@@ -9,11 +9,11 @@
                     <form action="/doctor-login" method="post">
                         <div class="form-group">
                             <i class="fa fa-user"></i>
-                            <input type="text" class="form-control" placeholder="Doctor Name" name="doctorname" required="required">
+                            <input type="text" class="form-control" placeholder="Doctor Name" name="username" required="required">
                         </div>
                         <div class="form-group">
                             <i class="fa fa-lock"></i>
-                            <input type="password" class="form-control" placeholder="Password" name="doctorpass" required="required">					
+                            <input type="password" class="form-control" placeholder="Password" name="password" required="required">					
                         </div>
                         <div class="form-group">
                             <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
