--- a/views/doctor-signup.ejs
+++ b/views/doctor-signup.ejs
@@ -6,14 +6,14 @@
             <p>Please fill in this form to create an account!</p>
             <hr>
             <div class="form-group">
-                <input type="text" class="form-control" name="name" placeholder="Name" required="required"></div>     	
+                <input type="text" class="form-control" name="username" placeholder="Name" required="required"></div>     	
             
             <div class="form-group">
                 <input type="password" class="form-control" name="password" placeholder="Password" required="required">
             </div> 
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label class="checkbox-inline"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
-            </div>
+            </div> -->
             <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
             </div>
