--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,10 +5,17 @@
     <title>InstaDoc &mdash; Powered by Truebeat</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-
+    
 
   
     <style type="text/css">
+    .cont{
+        padding: 25% 25%;
+    }
+    .jum{
+        height: 400px;
+        background:none;
+    }
         .dashboard{
             padding: 20% 10%;
             background: #74ebd5;  /* fallback for old browsers */
@@ -204,14 +211,14 @@ background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3
               <li><a href="about.html" class="animsition-link">About</a></li>
               
               <li><a href="#contact" class="animsition-link">Contact</a></li>
-              <% if(!username){%>
+              
                 <li><a href="/doctor-login" class="animsition-link">Doctors</a></li>  
 
-            <%} else{%>
-                <li><a href="/user" class="animsition-link">Welcome <%=username%></a></li>            
+            
+                <li><a href="/user" class="animsition-link">Welcome</a></li>            
                 <li><a href="/logout" class="animsition-link">Log out</a></li>
      
-            <%}%>
+            
             </ul> <!-- .templateux-menu -->
 
           </nav> <!-- .site-nav -->
