--- a/views/doctor-signup.ejs
+++ b/views/doctor-signup.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 
 <div class="signup-form">
-    <form action="/doctor-signup" method="post">
+    <form action="/doctor/signup" method="post">
             <h2>Sign Up</h2>
             <p>Please fill in this form to create an account!</p>
             <hr>
@@ -11,14 +11,15 @@
             <div class="form-group">
                 <input type="password" class="form-control" name="password" placeholder="Password" required="required">
             </div> 
-            <!-- <div class="form-group">
+            <div class="form-group">
                 <label class="checkbox-inline"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
-            </div> -->
+            </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
             </div>
+            <div class="hint-text">Already have an account? <a href="/doctor/login">Login here</a></div>
+
        </form>
-	<div class="hint-text">Already have an account? <a href="doctor-login">Login here</a></div>
 </div>
 
 <% include partials/footer %>
