--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -99,7 +99,7 @@ background: linear-gradient(to right, #ACB6E5, #74ebd5); /* W3C, IE 10+/ Edge, F
         background: #ADA996;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-		background-color: #636363;
+		/* background-color: #636363; */
 		font-family: 'Roboto', sans-serif ,'Varela Round';
         width:100%;
 	         height:100vh;
@@ -211,12 +211,14 @@ background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3
               <li><a href="about.html" class="animsition-link">About</a></li>
               
               <li><a href="#contact" class="animsition-link">Contact</a></li>
+              <% if(!currentUser){  %>
+                <li><a href="/doctor/login" class="animsition-link">Doctors</a></li>  
+              <% } else { %>
+                    <li><a href="/doctor/dash" class="animsition-link">Welcome <%= currentUser.username %></a></li>            
+                
+                    <li><a href="/logout" class="animsition-link">Log out</a></li>
+              <% } %>
               
-                <li><a href="/doctor-login" class="animsition-link">Doctors</a></li>  
-
-            
-                <li><a href="/user" class="animsition-link">Welcome</a></li>            
-                <li><a href="/logout" class="animsition-link">Log out</a></li>
      
             
             </ul> <!-- .templateux-menu -->
