--- a/views/doctor-signup.ejs
+++ b/views/doctor-signup.ejs
@@ -6,8 +6,20 @@
             <p>Please fill in this form to create an account!</p>
             <hr>
             <div class="form-group">
-                <input type="text" class="form-control" name="username" placeholder="Name" required="required"></div>     	
-            
+                <input type="text" class="form-control" name="username" placeholder="Name" required="required">
+            </div>   
+            <div class="form-group">
+                <label class="sr-only" for="inlineFormInputGroupUsername2">Username</label>
+                <div class="input-group mb-2 mr-sm-2">
+                    <div class="input-group-prepend">
+                    <div class="input-group-text">InstaDoc/</div>
+                    </div>
+                    <input type="text" class="form-control" name="roomname" id="inlineFormInputGroupUsername2" placeholder="Room Name" required="required">
+                </div>
+            </div>  	
+            <div class="form-group">
+                    <input type="email" class="form-control" name="email" placeholder="email" required="required">
+            </div>
             <div class="form-group">
                 <input type="password" class="form-control" name="password" placeholder="Password" required="required">
             </div> 
