minor changes made here and there

--- a/views/doctor-dash.ejs
+++ b/views/doctor-dash.ejs
@@ -2,10 +2,14 @@
 
 <div class = "jumbotron-fluid jum">
     <div class="container-fluid cont">
-        <h2>Hi Doctor your patience are waiting   <a class="btn btn-primary" href="https://hubl.in/DocC101">Click here</a></h2>
+            <h4><%=currentUser.username %></h4>
+            <p><%=currentUser.mobile%></p>
+            <p><%=currentUser.userid%></p>
+            <p><%=currentUser.email%></p>
+                   
+
     </div>
 </div>>
-    
     
     
 <% include partials/footer %>
