--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,7 @@ background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3
   padding: 25% 25%;
 }
 .jum{
-  height: 400px;
+  height: 100%;
   background:none;
 }
   .dashboard{
