--- a/views/doctor-signup.ejs
+++ b/views/doctor-signup.ejs
@@ -12,13 +12,16 @@
                 <label class="sr-only" for="inlineFormInputGroupUsername2">Username</label>
                 <div class="input-group mb-2 mr-sm-2">
                     <div class="input-group-prepend">
-                    <div class="input-group-text">InstaDoc/</div>
+                    <div class="input-group-text">Instadoc.me/</div>
                     </div>
-                    <input type="text" class="form-control" name="roomname" id="inlineFormInputGroupUsername2" placeholder="Room Name" required="required">
+                    <input type="text" class="form-control" name="userid" id="inlineFormInputGroupUsername2" placeholder="User ID" required="required">
                 </div>
             </div>  	
             <div class="form-group">
-                    <input type="email" class="form-control" name="email" placeholder="email" required="required">
+                    <input type="email" class="form-control" name="email" placeholder="Email" required="required">
+            </div>
+            <div class="form-group">
+                <input type="number" class="form-control" name="mobile" placeholder="Mobile No." required="required">
             </div>
             <div class="form-group">
                 <input type="password" class="form-control" name="password" placeholder="Password" required="required">
