--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,12 +74,15 @@ background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3
 
 /* Doctor Dashboard */
 
-.cont{
-  padding: 25% 25%;
-}
-.jum{
+
+.dt-da{
   height: 100%;
   background:none;
+  padding: 25% 25%;
+  background: #000046;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
 }
   .dashboard{
       padding: 20% 10%;
@@ -240,3 +243,18 @@ background: linear-gradient(to right, #ACB6E5, #74ebd5); /* W3C, IE 10+/ Edge, F
   text-align: center;
   }
   
+/* USER LOGIN FORM CSS */
+
+
+
+  
+/* Waiting room */
+ .wait-r{
+  height: 100%;
+  background:none;
+  padding: 25% 25%;
+  background: #1c92d2;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #f2fcfe, #1c92d2);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #f2fcfe, #1c92d2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+ }
