--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                             <form action="/user" method="post">
                                 <div class="form-group">
                                     <i class="fa fa-user"></i>
-                                    <input type="text" class="form-control" placeholder="Username" name="username" required="required">
+                                    <input type="text" class="form-control" placeholder="Username" name="name" required="required">
                                 </div>
                                 <div class="form-group">
                                     <i class="fa fa-lock"></i>
