Unique userid for doctor upon signup and doctor can login with username and userid

--- a/views/doctor-dash.ejs
+++ b/views/doctor-dash.ejs
@@ -13,6 +13,7 @@
                             <p>Mobile No.: <%=currentUser.mobile%></p>
                             <p>Room Name: <%=currentUser.userid%></p>
                             <p>Email: <%=currentUser.email%></p>
+                            <p>Join Date: <%=currentUser.dateOfJoin.toDateString()%></p>
                     </div>
                 </div>
     </div>
