--- a/views/doctor-login.ejs
+++ b/views/doctor-login.ejs
@@ -9,7 +9,7 @@
                     <form action="/doctor/login" method="post">
                         <div class="form-group">
                             <i class="fa fa-user"></i>
-                            <input type="text" class="form-control" placeholder="Doctor Name" name="username" required="required">
+                            <input type="text" class="form-control" placeholder="Doctor Name/Roomname" name="username" required="required">
                         </div>
                         <div class="form-group">
                             <i class="fa fa-lock"></i>
