--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,9 +36,9 @@
               <% if(!currentUser){  %>
                 <li><a href="/doctor/login" class="animsition-link">Doctors</a></li>  
               <% } else { %>
-                    <li><a href="/doctor/dash" class="animsition-link">Welcome <%= currentUser.username %></a></li>            
+                    <li><a href="/doctor/dash" class="animsition-link"><%= currentUser.username %></a></li>            
                 
-                    <li><a href="/logout" class="animsition-link">Logout</a></li>
+                    <li><a href="/doctor/logout" class="animsition-link">Logout</a></li>
               <% } %>
               
      
@@ -50,4 +50,20 @@
 
         </div> <!-- .row -->
       </div> <!-- .container -->
+      <div class="container mt-1 " style="width:550px;">
+          <% if(error && error.length>0){ %>
+            <div class="alert alert-danger text-center " role="alert">
+                <%=error%>
+              </div>
+          <%} %>
+          <% if(success && success.length>0){ %>
+            <div class="alert alert-success text-center " role="alert">
+                <%=success%>
+              </div>
+          <%} %>
+          
+        </div>
     </header> <!-- .templateux-navba -->
+
+    
+    
