--- a/views/Doctor/Dashboard.ejs
+++ b/views/Doctor/Dashboard.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class = "jumbotron-fluid dt-da">
     <div class="container-fluid ">
@@ -20,4 +20,4 @@
 </div>
     
     
-<% include partials/footer %>
+<% include ../partials/footer %>
