--- a/views/Doctor/Login.ejs
+++ b/views/Doctor/Login.ejs
@@ -1,4 +1,4 @@
-<% include partials/header.ejs %>
+<% include ../partials/header.ejs %>
 <div class="dashboard"  >
             <div class="modal-dialog modal-login">
             <div class="modal-content">
@@ -26,4 +26,4 @@
             </div>
         </div>
 </div>
-<% include partials/footer.ejs %>
+<% include ../partials/footer.ejs %>
