--- a/views/Doctor/Signup.ejs
+++ b/views/Doctor/Signup.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="signup-form">
     <form action="/doctor/signup" method="post">
@@ -37,4 +37,4 @@
        </form>
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
