--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,39 +9,9 @@
           <div class="col-lg-6 order-lg-1">
             <h1 class="heading mb-3 text-white" data-aos="fade-up">Design a better website template.</h1>
             <p class="lead mb-5 text-white" data-aos="fade-up"  data-aos-delay="100">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            <a href="#myModal" class="trigger-btn btn-primary btn-lg" data-toggle="modal">Get Started</a>
+            <a href="/user/login" class="trigger-btn btn-primary btn-lg" >Get Started</a>
         </div>
-        <!-- Modal HTML -->
-            <div id="myModal" class="modal fade">
-                <div class="modal-dialog modal-login">
-                    <div class="modal-content">
-                        <div class="modal-header">				
-                            <h4 class="modal-title">User Login</h4>
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        </div>
-                        <div class="modal-body">
-                            <form action="/user" method="post">
-                                <div class="form-group">
-                                    <i class="fa fa-user"></i>
-                                    <input type="text" class="form-control" placeholder="Username" name="name" required="required">
-                                </div>
-                                <div class="form-group">
-                                    <i class="fa fa-lock"></i>
-                                    <input type="number" class="form-control" placeholder="Mobile Number" name="mobile" required="required">					
-                                </div>
-                                <div class="form-group">
-                                    <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
-                                </div>
-                            </form>				
-                            
-                        </div>
-                        <div class="modal-footer">
-                            <a href="#">Sign Up? Nah, just login!</a>
-                        </div>
-                    </div>
-                </div>
-            </div>     
-
+        
           
         </div>
         
