Added edit and delete account option for doctor

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -575,3 +575,4 @@ background: linear-gradient(to top, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+/ 
   background: linear-gradient(to right, #ffc0cb, #800080); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
+/* Doctor profile styling */
