--- a/views/Doctor/Dashboard.ejs
+++ b/views/Doctor/Dashboard.ejs
@@ -11,10 +11,10 @@
                 </a>
             </li>
             <li class="active-li">
-                <a href="#">Dashbaord</a>
+                <a href="/doctor/dashboard">Dashboard</a>
             </li>
             <li>
-                <a href="/Doctor/Profile">Profile</a>
+                <a href="/doctor/<%=currentUser._id%>/Profile">Profile</a>
             </li>
             <li>
                 <a href="#">Waiting Room</a>
@@ -24,6 +24,9 @@
             </li>
             <li>
                 <a href="#">Contact</a>
+            </li>
+            <li>
+                <a href="#">Delete Account</a>
             </li>
             <li>
                 <a href="/doctor/logout">Logout</a>
