--- a/views/Doctor/Profile.ejs
+++ b/views/Doctor/Profile.ejs
@@ -11,10 +11,10 @@
                 </a>
             </li>
             <li>
-                <a href="#">Dashbaord</a>
+                <a href="/doctor/dashboard">Dashboard</a>
             </li>
             <li  class="active-li">
-                <a href="/Doctor/Profile">Profile</a>
+                <a href="/doctor/<%=currentUser._id%>/Profile">Profile</a>
             </li>
             <li>
                 <a href="#">Waiting Room</a>
@@ -24,6 +24,9 @@
             </li>
             <li>
                 <a href="#">Contact</a>
+            </li>
+            <li>
+                <a href="#">Delete Account</a>
             </li>
             <li>
                 <a href="/doctor/logout">Logout</a>
@@ -44,8 +47,13 @@
                         
                                
                         <div class="border border-dark rounded ">
-                                <div class="bg-primary  text-left text-white d-block  p-3 border-bottom">
-                                    <h2>PROFILE</h2>
+                                <div class="bg-primary d-flex text-white d-block   border-bottom">
+                                    <div class="text-left p-2">
+                                        <h2>PROFILE</h2>
+                                    </div>
+                                    <div class="p-3">
+                                        <span ><a href="/doctor/<%= currentUser._id  %>/edit"><i class="far fa-edit"></i>Edit</a></span>
+                                    </div>
                                 </div>
                                 <div class="p-3 bg-light text-dark profile">
                                         <p>Name: <%=currentUser.username %></p>
@@ -53,6 +61,29 @@
                                         <p>Room Name: <%=currentUser.userid%></p>
                                         <p>Email: <%=currentUser.email%></p>
                                         <p>Join Date: <%=currentUser.dateOfJoin.toDateString()%></p>
+                                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">Delete Account</button>
+                                            <!-- Modal -->
+                                                <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                    <div class="modal-dialog" role="document">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                        <h5 class="modal-title" id="exampleModalLabel">Are you sure you want to delete?</h5>
+                                                        <button class="close" data-dismiss="modal" aria-label="Close">
+                                                            <span aria-hidden="true">&times;</span>
+                                                        </button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            Once you delete your account you won't be able to recover it.
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                        <button class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                        <form action="/doctor/<%=currentUser._id%>?_method=DELETE" method="POST">
+                                                            <button class="btn btn-danger">Delete</button>
+                                                        </form>
+                                                        </div>
+                                                    </div>
+                                                    </div>
+                                                </div>
                                 </div>
                             </div>
                 </div>
