--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,9 @@
             
         </div>
           <div class="col-lg-6 order-lg-1">
-            <h1 class="heading mb-3 text-white" data-aos="fade-up">Design a better website template.</h1>
-            <p class="lead mb-5 text-white" data-aos="fade-up"  data-aos-delay="100">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-            <a href="/user/login" class="trigger-btn btn-primary btn-lg" >Get Started</a>
+            <h1 class="heading mb-3 text-white" data-aos="fade-up">A better Way to coonect with patients</h1>
+            <p class="lead mb-5 text-white" data-aos="fade-up"  data-aos-delay="100">Connect with patients over the internet to reduce the hassle of visitng a clinc and increase work efficency</p>
+            <a href="/doctor/login" class="trigger-btn btn-primary btn-lg" >Get Started</a>
         </div>
         
           
@@ -27,8 +27,8 @@
                 <div class="media block-icon-1 d-block text-left">
                   <div class="icon mb-3"><span class="ion-ios-lightbulb-outline"></span></div>
                   <div class="media-body">
-                    <h3 class="h5 mb-4">Intuitive Thinking</h3>
-                    <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                    <h3 class="h5 mb-4">Lower Cost</h3>
+                    <p>A Platform Gives a cost efficetive Solotion</p>
                   </div>
                 </div> <!-- .block-icon-1 -->
               </div>
@@ -36,8 +36,8 @@
                 <div class="media block-icon-1 d-block text-left">
                   <div class="icon mb-3"><span class="ion-ios-nutrition-outline"></span></div>
                   <div class="media-body">
-                    <h3 class="h5 mb-4">Orange for Carrots</h3>
-                    <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                    <h3 class="h5 mb-4">Save Waiting Time</h3>
+                    <p>Greatly Reduce Patients Time In Waiting Room</p>
                   </div>
                 </div> <!-- .block-icon-1 -->
               </div>
@@ -45,8 +45,8 @@
                 <div class="media block-icon-1 d-block text-left">
                   <div class="icon mb-3"><span class="ion-ios-infinite-outline"></span></div>
                   <div class="media-body">
-                    <h3 class="h5 mb-4">Infinite Posibilities</h3>
-                    <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                    <h3 class="h5 mb-4">Competitive Edge</h3>
+                    <p>Your Patients Deserve the Best, We are here to help you with that</p>
                   </div>
                 </div> <!-- .block-icon-1 -->
               </div>
@@ -66,11 +66,11 @@
         </div> <!-- .row -->
         <div class="row mb-5" data-aos="fade-up">
           <div class="col-md-6">
-            <p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. <a href="#">Separated they live in Bookmarksgrove</a> right at the coast of the Semantics, a large language ocean.</p>
+            <p class="lead">Connect with patients over the internet to reduce the hassle of visitng a clinc and increase work efficency <a href="#">Separated they live in Bookmarksgrove</a> right at the coast of the Semantics, a large language ocean.</p>
           </div>
           <div class="col-md-6">
             <p> When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p>An Innovative Way to EFfictively manage Time with Patients It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
           </div>
         </div>
       </div> <!-- .container -->
@@ -97,7 +97,7 @@
               <div class="icon mb-3"><span class="ion-ios-loop"></span></div>
               <div class="media-body">
                 <h3 class="h5 mb-4">Regular Update</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>An Innovative Way to EFfictively manage Time with Patients</p>
               </div>
             </div> <!-- .block-icon-1 -->
           </div>
@@ -106,7 +106,7 @@
               <div class="icon mb-3"><span class="ion-ios-infinite-outline"></span></div>
               <div class="media-body">
                 <h3 class="h5 mb-4">Infinite Posibilities</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>An Innovative Way to EFfictively manage Time with Patients</p>
               </div>
             </div> <!-- .block-icon-1 -->
           </div>
@@ -115,7 +115,7 @@
               <div class="icon mb-3"><span class="ion-ios-locked-outline"></span></div>
               <div class="media-body">
                 <h3 class="h5 mb-4">Good Security</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>An Innovative Way to EFfictively manage Time with Patients</p>
               </div>
             </div> <!-- .block-icon-1 -->
           </div>
@@ -125,7 +125,7 @@
               <div class="icon mb-3"><span class="ion-ios-nutrition-outline"></span></div>
               <div class="media-body">
                 <h3 class="h5 mb-4">Orange for Carrots</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>An Innovative Way to EFfictively manage Time with Patients</p>
               </div>
             </div> <!-- .block-icon-1 -->
           </div>
@@ -134,7 +134,7 @@
               <div class="icon mb-3"><span class="ion-ios-lightbulb-outline"></span></div>
               <div class="media-body">
                 <h3 class="h5 mb-4">Intuitive Thinking</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>An Innovative Way to EFfictively manage Time with Patients</p>
               </div>
             </div> <!-- .block-icon-1 -->
           </div>
@@ -143,7 +143,7 @@
               <div class="icon mb-3"><span class="ion-ios-videocam-outline"></span></div>
               <div class="media-body">
                 <h3 class="h5 mb-4">Play Video</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>An Innovative Way to EFfictively manage Time with Patients</p>
               </div>
             </div> <!-- .block-icon-1 -->
           </div>
@@ -199,7 +199,7 @@
             <div class="owl-carousel wide-slider-testimonial">
               <div class="item">
                 <blockquote class="block-testomonial">
-                  <p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
+                  <p>&ldquo;Connect with patients over the internet to reduce the hassle of visitng a clinc and increase work efficency Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
                 </blockquote>
               </div>
 
@@ -211,7 +211,7 @@
 
               <div class="item">
                 <blockquote class="block-testomonial">
-                  <p>&ldquo;A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.&rdquo;</p>
+                  <p>&ldquo;An Innovative Way to EFfictively manage Time with Patients It is a paradisematic country, in which roasted parts of sentences fly into your mouth.&rdquo;</p>
                 </blockquote>
               </div>
             </div>
