--- a/views/Doctor/Dashboard.ejs
+++ b/views/Doctor/Dashboard.ejs
@@ -45,7 +45,8 @@
         <header class="jumbotron">
             <div class="container">
                 <h1>Welocome <%=currentUser.username %></h1>
-                <p>Your patients are waiting</p>
+                <p>Your patients are waiting</p> 
+                <p>Ask your Patients to vist you at  <a type="button" href="https://hubl.in/<%=currentUser.userid%>">https://hubl.in/<%=currentUser.userid%></a></p>
                 <p>
                     <a type="button" href="https://hubl.in/<%=currentUser.userid%>" class="btn btn-outline-dark">Start chat</a>
 
