--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
             
         </div>
           <div class="col-lg-6 order-lg-1">
-            <h1 class="heading mb-3 text-white" data-aos="fade-up">A better Way to coonect with patients</h1>
+            <h1 class="heading mb-3 text-white" data-aos="fade-up">A better Way to Connect with Patients</h1>
             <p class="lead mb-5 text-white" data-aos="fade-up"  data-aos-delay="100">Connect with patients over the internet to reduce the hassle of visitng a clinc and increase work efficency</p>
             <a href="/doctor/login" class="trigger-btn btn-primary btn-lg" >Get Started</a>
         </div>
@@ -27,8 +27,8 @@
                 <div class="media block-icon-1 d-block text-left">
                   <div class="icon mb-3"><span class="ion-ios-lightbulb-outline"></span></div>
                   <div class="media-body">
-                    <h3 class="h5 mb-4">Lower Cost</h3>
-                    <p>A Platform Gives a cost efficetive Solotion</p>
+                    <h3 class="h5 mb-4">Easily Adoptable</h3>
+                    <p>A Unique Link to Suit your Uniquness.</p>
                   </div>
                 </div> <!-- .block-icon-1 -->
               </div>
@@ -45,7 +45,7 @@
                 <div class="media block-icon-1 d-block text-left">
                   <div class="icon mb-3"><span class="ion-ios-infinite-outline"></span></div>
                   <div class="media-body">
-                    <h3 class="h5 mb-4">Competitive Edge</h3>
+                    <h3 class="h5 mb-4">A Cut Above The Rest</h3>
                     <p>Your Patients Deserve the Best, We are here to help you with that</p>
                   </div>
                 </div> <!-- .block-icon-1 -->
@@ -61,16 +61,16 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-12 block-heading-wrap" data-aos="fade-up">
-            <h2 class="heading mb-5 text-center">Good Design is a Good Start</h2>
+            <h2 class="heading mb-5 text-center">Better Care makes a better Doctor</h2>
           </div>
         </div> <!-- .row -->
         <div class="row mb-5" data-aos="fade-up">
           <div class="col-md-6">
-            <p class="lead">Connect with patients over the internet to reduce the hassle of visitng a clinc and increase work efficency <a href="#">Separated they live in Bookmarksgrove</a> right at the coast of the Semantics, a large language ocean.</p>
+            <p class="lead">Connect with patients over the internet to reduce the hassle of visitng a clinc and increase work efficency. Just give your Patients your unique URL on their first visit.</p>
           </div>
           <div class="col-md-6">
-            <p> When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-            <p>An Innovative Way to EFfictively manage Time with Patients It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p> Greatly Reduce the time patients waste waiting in a waiting room to consult a Docotr. Instant Appoinments and Better Treatment</p>
+            <p>An Innovative Way to Efficently Manage Time with Patients. Giving your Patients a treatment and care thats a cut above the rest.</p>
           </div>
         </div>
       </div> <!-- .container -->
@@ -96,8 +96,8 @@
             <div class="media block-icon-1 d-block text-center">
               <div class="icon mb-3"><span class="ion-ios-loop"></span></div>
               <div class="media-body">
-                <h3 class="h5 mb-4">Regular Update</h3>
-                <p>An Innovative Way to EFfictively manage Time with Patients</p>
+                <h3 class="h5 mb-4">Easy to Use</h3>
+                <p>Just paste the custom URL and its done</p>
               </div>
             </div> <!-- .block-icon-1 -->
           </div>
@@ -106,7 +106,7 @@
               <div class="icon mb-3"><span class="ion-ios-infinite-outline"></span></div>
               <div class="media-body">
                 <h3 class="h5 mb-4">Infinite Posibilities</h3>
-                <p>An Innovative Way to EFfictively manage Time with Patients</p>
+                <p>Change the way patients experienced Post Diagostic Care</p>
               </div>
             </div> <!-- .block-icon-1 -->
           </div>
@@ -114,8 +114,8 @@
             <div class="media block-icon-1 d-block text-center">
               <div class="icon mb-3"><span class="ion-ios-locked-outline"></span></div>
               <div class="media-body">
-                <h3 class="h5 mb-4">Good Security</h3>
-                <p>An Innovative Way to EFfictively manage Time with Patients</p>
+                <h3 class="h5 mb-4">Favorable Privacy</h3>
+                <p>We don't store any patients information</p>
               </div>
             </div> <!-- .block-icon-1 -->
           </div>
@@ -124,8 +124,8 @@
             <div class="media block-icon-1 d-block text-center">
               <div class="icon mb-3"><span class="ion-ios-nutrition-outline"></span></div>
               <div class="media-body">
-                <h3 class="h5 mb-4">Orange for Carrots</h3>
-                <p>An Innovative Way to EFfictively manage Time with Patients</p>
+                <h3 class="h5 mb-4">A better Care  </h3>
+                <p>Make every patients like your treatment</p>
               </div>
             </div> <!-- .block-icon-1 -->
           </div>
@@ -134,7 +134,7 @@
               <div class="icon mb-3"><span class="ion-ios-lightbulb-outline"></span></div>
               <div class="media-body">
                 <h3 class="h5 mb-4">Intuitive Thinking</h3>
-                <p>An Innovative Way to EFfictively manage Time with Patients</p>
+                <p>An Innovative Way to Efficently Manage Time with Patients</p>
               </div>
             </div> <!-- .block-icon-1 -->
           </div>
@@ -142,8 +142,8 @@
             <div class="media block-icon-1 d-block text-center">
               <div class="icon mb-3"><span class="ion-ios-videocam-outline"></span></div>
               <div class="media-body">
-                <h3 class="h5 mb-4">Play Video</h3>
-                <p>An Innovative Way to EFfictively manage Time with Patients</p>
+                <h3 class="h5 mb-4">Online Video Calling</h3>
+                <p>Talk with the patients over the Video giving them the assurance of a clinic at the comfort of their home</p>
               </div>
             </div> <!-- .block-icon-1 -->
           </div>
@@ -199,19 +199,19 @@
             <div class="owl-carousel wide-slider-testimonial">
               <div class="item">
                 <blockquote class="block-testomonial">
-                  <p>&ldquo;Connect with patients over the internet to reduce the hassle of visitng a clinc and increase work efficency Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
+                  <p>&ldquo;InstaDoc has helped me reduce a lot of time wasted waiting in a clinc&rdquo;</p>
                 </blockquote>
               </div>
 
               <div class="item">
                 <blockquote class="block-testomonial">
-                  <p>&ldquo;When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.&rdquo;</p>
+                  <p>&ldquo;I was amazed by the effectiveness of Post Diagnostic Care Offered By My Doctor&rdquo;</p>
                 </blockquote>
               </div>
 
               <div class="item">
                 <blockquote class="block-testomonial">
-                  <p>&ldquo;An Innovative Way to EFfictively manage Time with Patients It is a paradisematic country, in which roasted parts of sentences fly into your mouth.&rdquo;</p>
+                  <p>&ldquo;Tele-Post Diagnostic Care Must be the new Standerd for Health-Care&rdquo;</p>
                 </blockquote>
               </div>
             </div>
