--- a/views/Doctor/Dashboard.ejs
+++ b/views/Doctor/Dashboard.ejs
@@ -44,7 +44,7 @@
     <div class="container">
         <header class="jumbotron">
             <div class="container">
-                <h1>Welocome <%=currentUser.username %></h1>
+                <h1>Welcome <%=currentUser.username %></h1>
                 <p>Your patients are waiting</p> 
                 <p>Ask your Patients to vist you at  <a type="button" href="http://www.instadoc.me/<%=currentUser.userid%>">www.instadoc.me/<%=currentUser.userid%></a></p>
                 <p>
