User page changes

--- a/views/User/Login.ejs
+++ b/views/User/Login.ejs
@@ -7,7 +7,7 @@
             <h4 class="modal-title">User Login</h4>
         </div>
         <div class="modal-body">
-            <form action="/user/login" method="post">
+            <form action="/<%= doctorDetail.userid %>" method="post">
                 <div class="form-group">
                     <i class="fa fa-user"></i>
                     <input type="text" class="form-control" placeholder="Username" name="username" required="required">
