--- a/views/User/wait.ejs
+++ b/views/User/wait.ejs
@@ -5,7 +5,8 @@
     <div class="container-fluid cont">
         <div class="border border-dark rounded ">
             <div class="bg-primary  text-left text-white d-block p-1 border-bottom">
-                <h3>Name: Dr.<%=doctordetail.username %></h3>
+                    <h4>Hello <%= username %></h4>
+                <h3>Doctor Name: Dr.<%=doctordetail.username %></h3>
             </div>
             <div class="p-3 bg-light">
                 <h5>Status:Online</h5>
