--- a/views/Doctor/Dashboard.ejs
+++ b/views/Doctor/Dashboard.ejs
@@ -58,4 +58,8 @@
 </div>
 <!-- /#wrapper -->
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="/js/chat.js"></script>
+
 <% include ../partials/doctorFooter %>
