--- a/views/Doctor/Dashboard.ejs
+++ b/views/Doctor/Dashboard.ejs
@@ -42,20 +42,41 @@
         
     </div>
     <div class="container">
-        <header class="jumbotron">
-            <div class="container">
-                <h1>Welcome <%=currentUser.username %></h1>
-                <p>Your patients are waiting</p> 
-                <p>Ask your Patients to vist you at  <a type="button" href="http://www.instadoc.me/<%=currentUser.userid%>">www.instadoc.me/<%=currentUser.userid%></a></p>
-                <p>
-                    <a type="button" href="https://hubl.in/<%=currentUser.userid%>" class="btn btn-outline-dark">Start chat</a>
-
-                </p>
+        <div class="row">
+            <div class="col-md-4">
+                    <div class="well">
+                            <h3>Online Users</h3>
+                            <ul class="list-group" id="users"></ul>
+                          </div>
             </div>
-            <section id="userWaiting">
+            <div class="col-md-8">
+                    <header class="jumbotron">
+                            <div class="container">
+                                <h1>Welcome <span id="doctorName"><%=currentUser.username %></span></h1>
+                                <p>Your patients are waiting</p> 
+                                <p>Ask your Patients to vist you at  <a type="button" href="http://www.instadoc.me/<%=currentUser.userid%>">www.instadoc.me/<%=currentUser.userid%></a></p>
+                                <p>
+                                    <a type="button" href="https://hubl.in/<%=currentUser.userid%>" class="btn btn-outline-dark">Start chat</a>
+                
+                                </p>
+                            </div>
+                            
+                        </header>
+            </div>
+        </div>
+        <div class="messageArea">
+                <div id="chat" class="chat"></div>
+                <form id="messageForm" action="">
+                  <div class="form-group">
+                    <label>Enter Message</label>
+                    <textarea class="form-control" id="message"></textarea>
+                    <br />
+                    <input type="submit" class="btn btn-primary" value="send message" />
+                  </div>
+                </form>
+              </div>
 
-            </section>
-        </header>
+       
     <!-- /#page-content-wrapper -->
 
 </div>
