--- a/views/User/wait.ejs
+++ b/views/User/wait.ejs
@@ -16,7 +16,22 @@
 
             </div>
         </div>
+          
+       
     </div>
+    <div class="messageArea">
+            <div id="chat" class="chat"></div>
+            <form id="messageForm" action="">
+              <div class="form-group">
+                <label>Enter Message</label>
+                <textarea class="form-control" id="message"></textarea>
+                <br />
+                <input type="submit" class="btn btn-primary" value="send message" />
+              </div>
+            </form>
+          </div>
+          
+         
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
