--- a/views/User/wait.ejs
+++ b/views/User/wait.ejs
@@ -2,9 +2,9 @@
 
 
 <div class = "jumbotron-fluid wait-r">
-    <div class="container-fluid cont">
+    <div class="container ">
         <div class="border border-dark rounded ">
-            <div class="bg-primary  text-left text-white d-block p-1 border-bottom">
+            <div class="text-left text-white d-block p-1 border-bottom" style="background-color: #1A58D233 !important;" >
                     <h4>Hello <span id="Username"><%= username %></span></h4>
                     <h5>Mobile:<span id="mob"><%=mobile%></span></h5>
                     <h3>You have visited <span id="roomname"><%=doctordetail.userid%></span></h3>
@@ -19,12 +19,14 @@
           
        
     </div>
+    <br>
     <div class="messageArea">
-            <div id="chat" class="chat"></div>
+            <h4>Global Waiting Room Chat</h4>
+            <div id="chat" class="chat" style="overflow: auto;resize: vertical;height: 170px;background-color: #8e37901a;border-radius: 3px 3px 0px 0px;color: #1a3349;"></div>
             <form id="messageForm" action="">
               <div class="form-group">
-                <label>Enter Message</label>
-                <textarea class="form-control" id="message"></textarea>
+               
+                <textarea class="form-control" id="message" placeholder="Enter Your Message"></textarea>
                 <br />
                 <input type="submit" class="btn btn-primary" value="send message" />
               </div>
