--- a/views/User/wait.ejs
+++ b/views/User/wait.ejs
@@ -11,7 +11,7 @@
                 <h3>Doctor Name: Dr.<span  id="doctorName"><%=doctordetail.username %></span></h3>
             </div>
             <div class="p-3 bg-light">
-                <h5>Status:Online</h5>
+                <h5>Status:<span id= "status"> Offline </span></h5>
                 <a type="button" href="https://hubl.in/<%=doctordetail.userid%>" class="btn btn-outline-dark">Start chat</a>
 
             </div>
