Front End Changes.UnWated CSS

--- a/views/Doctor/Login.ejs
+++ b/views/Doctor/Login.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header.ejs %>
 <div class="dashboard"  >
-            <div class="modal-dialog modal-login">
+            <div class="modal-dialog modal-login" style="max-width: 350px">
             <div class="modal-content">
                 <div class="modal-header">				
                     <h4 class="modal-title">User Login</h4>
