--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="templateux-footer bg-dark">
+<!-- <footer class="templateux-footer bg-dark">
     <div class="container">
 
       <div class="row mb-5">
@@ -56,25 +56,23 @@
                 </ul>
               </div>
             </div>
-          </div> <!-- .row -->
+          </div> 
           
         </div>
-      </div> <!-- .row -->
+      </div> 
 
       <div class="row pt-5 text-left">
         <div class="col-md-12 text-left"><p>
-          <!-- Link back to Truebeat can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |Website Powered by <a href="https://thetruebeat.com" target="_blank" class="text-primary">Truebeat</a>
-          <!-- Link back to Truebeat can't be removed. Template is licensed under CC BY 3.0. -->
+        
         </p></div>
-      </div> <!-- .row -->
+      </div> 
 
     </div>
-  </footer> <!-- .templateux-footer -->
+  </footer> <
   
 
- </div> <!-- .js-animsition -->
-
+ </div> .js-animsition
+ -->
 
 <script src="/js/scripts-all.js"></script>
 <script src="/js/main.js"></script>
