--- a/views/User/Login.ejs
+++ b/views/User/Login.ejs
@@ -1,7 +1,9 @@
 <% include ../partials/header %>
 
+
+
 <div id="userLogin"  >
-    <div class="modal-dialog modal-login">
+    <div class="modal-dialog modal-login" style="max-width: 350px">
     <div class="modal-content">
         <div class="modal-header">				
             <h4 class="modal-title">User Login</h4>
@@ -26,6 +28,6 @@
         </div>
     </div>
 </div>
-</div>
+</div> -->
 
-<% include ../partials/footer %>
+<!-- <% include ../partials/footer %>
