--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,28 +3,33 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>InstaDoc &mdash; Powered by Truebeat</title>
+    <!-- <link rel="stylesheet" href="/css/style.css"> -->
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  
   </head>
-  <body>
+  <body style="background : #f5f6fa">
   
-  <div class="js-animsition animsition" id="site-wrap" data-animsition-in-class="fade-in" data-animsition-out-class="fade-out">
+  <!-- <div class="js-animsition animsition" id="site-wrap" data-animsition-in-class="fade-in" data-animsition-out-class="fade-out">
 
 
     <header class="templateux-navbar light" role="banner">
      
       <div class="container"  data-aos="fade-down">
-        <div class="row">
+        <div class="row"> -->
+
 
           <div class="col-3 templateux-logo">
-            <a href="/" class="animsition-link">InstaDoc</a>
+            <a href="/" class="animsition-link"> <img src="../images/instaLogo.png" alt="Health Ring" class="img-fluid" style="width:50px">
+              <span style="font-size: 25px;padding: 3px; color:rgb(0, 0, 0)">InstaDoc.me</span></a>
           </div>
           <nav class="col-9 site-nav ">
             <button class="d-block d-md-none hamburger hamburger--spin templateux-toggle templateux-toggle-light ml-auto templateux-toggle-menu" data-toggle="collapse" data-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
               <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
               </span>
-            </button> <!-- .templateux-toggle -->
+            </button> <!-- .templateux-toggle
 
             <ul class="sf-menu templateux-menu d-none d-md-block text-white-50">
               <li class="active">
@@ -41,7 +46,7 @@
                     <li><a href="/doctor/logout" class="animsition-link">Logout</a></li>
               <% } %>
               
-     
+      -->
             
             </ul> <!-- .templateux-menu -->
 
