Front End Changes Even Worse

--- a/views/Doctor/Dash2.ejs
+++ b/views/Doctor/Dash2.ejs
@@ -6,7 +6,7 @@
             <div class="sidebar-header">
                     <img src="../images/instaLogo.png" alt="Health Ring" class="img-fluid" style="width:50px">
                     <span style="font-size: 25px;padding: 3px">InstaDoc.me</span>
-                <h3>Dope Pic</h3>
+                <h3>Cool Pic</h3>
                 <br>
                 <br>
                 <br>
