--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,13 +11,13 @@
   </head>
   <body style="background : #f5f6fa">
   
-  <!-- <div class="js-animsition animsition" id="site-wrap" data-animsition-in-class="fade-in" data-animsition-out-class="fade-out">
+  <div class="js-animsition animsition" id="site-wrap" data-animsition-in-class="fade-in" data-animsition-out-class="fade-out">
 
 
     <header class="templateux-navbar light" role="banner">
      
       <div class="container"  data-aos="fade-down">
-        <div class="row"> -->
+        <div class="row">
 
 
           <div class="col-3 templateux-logo">
@@ -46,7 +46,7 @@
                     <li><a href="/doctor/logout" class="animsition-link">Logout</a></li>
               <% } %>
               
-      -->
+     
             
             </ul> <!-- .templateux-menu -->
 
