--- a/views/User/wait.ejs
+++ b/views/User/wait.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header.ejs %>
 
-<div class="container">
+<div class="container" style="padding:10%">
     <div class="jumbotron">
         <div class = "jumbotron-fluid wait-r">
     <div class="container ">
